Make trip Have Multiple Dates

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -131,8 +131,12 @@
 
           <div class="md:col-span-2">
             <label class="block font-medium">Trip Dates</label>
-            <input type="datetime-local" name="TripDates[]" required class="w-full border rounded-lg px-4 py-2" />
+            <div id="tripDatesContainer" class="space-y-2">
+              <input type="datetime-local" name="TripDates[]" required class="w-full border rounded-lg px-4 py-2" />
+            </div>
+            <button type="button" id="addTripDate" class="text-sm text-blue-600 hover:underline mt-1">+ Add another date</button>
           </div>
+          
 
           <div class="space-y-1">
             <label class="block font-medium">Category</label>
@@ -351,7 +355,7 @@ async function handleTripSubmit(e) {
     Description: extractTranslations("descriptionTranslations", "description"),
     Price: parseFloat(form.Price.value),
     Duration: parseInt(form.Duration.value),
-    TripDates: [new Date(form["TripDates[]"].value).toISOString()],
+    TripDates: Array.from(form.querySelectorAll("input[name='TripDates[]']")).map(input => new Date(input.value).toISOString()),
     IsAvailable: form.IsAvailable.checked,
     CategoryId: parseInt(form.CategoryId.value),
     Activities: Array.from(form.Activities.selectedOptions).map(opt => parseInt(opt.value)),
@@ -403,6 +407,17 @@ function setupEventListeners() {
   document.getElementById("addDescriptionTranslation").addEventListener("click", () => {
     document.getElementById("descriptionTranslations").appendChild(createTranslationRow("description"));
   });
+
+  document.getElementById("addTripDate").addEventListener("click", () => {
+    const container = document.getElementById("tripDatesContainer");
+    const input = document.createElement("input");
+    input.type = "datetime-local";
+    input.name = "TripDates[]";
+    input.required = true;
+    input.className = "w-full border rounded-lg px-4 py-2";
+    container.appendChild(input);
+  });
+  
 }
 
 // === Initialization ===
