--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -435,8 +435,8 @@ document.getElementById("imageUploadForm").addEventListener("submit", async (e) 
     return;
   }
 
-  const input = document.getElementById("tripImages");
-  const files = input.files;
+const fileInput = document.getElementById("upload");
+const files = Array.from(fileInput.files); // ✅ now it's a real array
 
   if (!files.length) {
     alert("Please select at least one image.");
