--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -435,7 +435,7 @@ document.getElementById("imageUploadForm").addEventListener("submit", async (e) 
     return;
   }
 
-const fileInput = document.getElementById("upload");
+const fileInput = document.getElementById("tripImages");
 const files = Array.from(fileInput.files); // ✅ now it's a real array
 
   if (!files.length) {
