Make EndPoints Of Images To Called from Origin

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -452,7 +452,7 @@ files.forEach((file, index) => {
   formData.append(`images[${index}].IsMainImage`, isMain.toString());
 });
   try {
-    const res = await fetch(`https://localhost:7134/api/Trip/AddImagesToTrip/${currentTripId}`, {
+    const res = await fetch(`/api/Trip/AddImagesToTrip/${currentTripId}`, {
       method: "POST",
       body: formData
     });
