--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -252,13 +252,14 @@ function renderTrips(trips) {
       <td class="px-6 py-3">${trip.duration}</td>
       <td class="px-6 py-3">${trip.isAvailable ? "Yes" : "No"}</td>
       <td class="px-6 py-3 flex items-center gap-2">
-        <button class="text-blue-400 hover:text-blue-900" title="Edit">
-          <i data-lucide="pencil"></i>
-        </button>
-        <button class="text-red-400 hover:text-red-900" title="Delete">
-          <i data-lucide="trash-2"></i>
-        </button>
-      </td>
+  <button class="text-blue-400 hover:text-blue-900" title="Edit">
+    <i data-lucide="pencil"></i>
+  </button>
+  <button class="text-red-400 hover:text-red-900" title="Delete" onclick="handleDeleteTrip(${trip.id})">
+    <i data-lucide="trash-2"></i>
+  </button>
+</td>
+
     `;
     tripTable.appendChild(row);
   });
@@ -432,6 +433,34 @@ async function handleTripSubmit(e) {
   } catch (err) {
     console.error("Error:", err);
     alert("Something went wrong.");
+  }
+}
+// === Handle Delete ===
+async function handleDeleteTrip(tripId) {
+  const confirmed = confirm("Are you sure you want to delete this trip?");
+  if (!confirmed) return;
+
+  const token = localStorage.getItem("accessToken");
+
+  try {
+    const res = await fetch(`/api/Trip/DeleteTrip/${tripId}`, {
+      method: "DELETE",
+      headers: {
+        "Authorization": `Bearer ${token}`
+      }
+    });
+
+    const result = await res.json();
+
+    if (res.ok && result.succeeded) {
+      alert("Trip deleted successfully.");
+      fetchTrips(); // Refresh the trip list
+    } else {
+      alert("Failed to delete trip: " + (result.message || result.errors || "Unknown error"));
+    }
+  } catch (err) {
+    console.error("Delete error:", err);
+    alert("Something went wrong while deleting the trip.");
   }
 }
 
