--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -516,7 +516,7 @@ async function openEditTripModal(tripId) {
   editTripId = tripId;
   const token = localStorage.getItem("accessToken");
   try {
-    const res = await fetch(`https://localhost:7134/api/Trip/GetTripByIdForAdmin/${tripId}`, {
+    const res = await fetch(`/api/Trip/GetTripByIdForAdmin/${tripId}`, {
       headers: { "Authorization": `Bearer ${token}` }
     });
     const result = await res.json();
